fixed ugly word wrapping via toggleWordOrNumberDisplay(), increased font

--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-/*button sounds are taken from:
-https://www.soundjay.com/button-sounds-1.html
-*/
+
 
 @font-face {
     font-family: 'digital-clock-font';
@@ -42,10 +40,10 @@ body {
     border-bottom: 20px solid black;
     border-radius: 45px;
     box-sizing: border-box;
-    font-size: 40px;
-    line-height: 40px;
-    word-wrap: break-word;
+    font-size: 60px;
+    line-height: 60px;
     word-break: break-all;
+    word-wrap: break-word;
     /* 
     */
 }
